force-app/main/default/objects/CQ_Logger_Config__c/fields/Buffer_Logs__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables log buffering, to dump logs only when CommitLogs() is called</description>
    <inlineHelpText>Enables log buffering, to dump logs only when CommitLogs() is called</inlineHelpText>
    <label>Buffer Logs</label>
    <type>Checkbox</type>
</CustomField>