force-app/main/default/objects/CQ_Logger_Config__c/fields/Debug_Log_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Debug_Log_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables DEBUG level logging</description>
    <inlineHelpText>Disables DEBUG level logging</inlineHelpText>
    <label>Debug Log Disabled</label>
    <type>Checkbox</type>
</CustomField>