force-app/main/default/objects/CQ_Logger_Config__c/fields/Fine_Logging_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Fine_Logging_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables FINE level logging</description>
    <inlineHelpText>Disables FINE level logging</inlineHelpText>
    <label>Fine Logging Disabled</label>
    <type>Checkbox</type>
</CustomField>