force-app/main/default/objects/CQ_Logger_Config__c/fields/Info_Logging_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Info_Logging_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables INFO level logging</description>
    <inlineHelpText>Disables INFO level logging</inlineHelpText>
    <label>Info Logging Disabled</label>
    <type>Checkbox</type>
</CustomField>